fix water per month and swagger
